HUA. Miu opt pass manages to link Andersen. but still compiler error. "clang-12: /home/poolmoo/tools/clangllvm/clangllvm.12.0.0/llvm-project/llvm/lib/Transforms/MiuProject/Optimisation/Andersen/lib/ExternalLibrary.cpp"

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,6 +1,7 @@
-include_directories (${andersen_SOURCE_DIR}/include)
+#include_directories (${andersen_SOURCE_DIR}/include)
+include_directories (../include)
 
-add_llvm_library(Temp_Anderson MODULE
+add_llvm_library(LLVMAndersenObj OBJECT 
   Andersen.cpp
   AndersenAA.cpp
   ConstraintCollect.cpp
@@ -18,12 +19,12 @@ add_llvm_library(Temp_Anderson MODULE
  #COMPONENT_NAME
  #lib 
 
- LINK_COMPONENTS
- Core
- Support 
+ #LINK_COMPONENTS
+ #Core
+ #Support 
 
- PLUGIN_TOOL 
- opt
+# PLUGIN_TOOL 
+# opt
  )
 #add_library (AndersenObj OBJECT ${AndersenSourceCodes})
 #add_library (Andersen SHARED $<TARGET_OBJECTS:AndersenObj>)
